--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "dingo/api": "^2.2",
         "laravel/lumen-framework": "5.8.*",
+        "rap2hpoutre/laravel-log-viewer": "^1.1",
         "vlucas/phpdotenv": "^3.3"
     },
     "require-dev": {
