--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Lumen
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:nGd9W19REmREgNG5B+PPrcDFafwzF+Kwrf/9VMmK83Y=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
