--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.1.3",
         "dingo/api": "^2.2",
+        "kitetail/zttp": "^0.4.0",
         "laravel/lumen-framework": "5.8.*",
         "rap2hpoutre/laravel-log-viewer": "^1.1",
         "vlucas/phpdotenv": "^3.3"
