--- a/.env.example
+++ b/.env.example
@@ -16,4 +16,26 @@ DB_USERNAME=homestead
 DB_PASSWORD=secret
 
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+
+QUEUE_CONNECTION=rabbitmq
+
+#rabbitmq
+#mq的服务器地址
+RABBITMQ_HOST=
+#mq的端口
+RABBITMQ_PORT=
+#mq的登录名
+RABBITMQ_LOGIN=
+#mq的密码
+RABBITMQ_PASSWORD=
+#mq的队列名称
+RABBITMQ_QUEUE=
+
+#dingo api
+API_STANDARDS_TREE=x
+API_SUBTYPE=xisland
+API_PREFIX=api
+# API_DOMAIN=api.myapp.com
+API_VERSION=v1
+API_NAME='My API'
+API_STRICT=false
