--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ DB_USERNAME=homestead
 DB_PASSWORD=secret
 
 CACHE_DRIVER=file
+CACHE_PREFIX=lumen
+
+#redis
+REDIS_HOST=
+REDIS_PORT=
 
 QUEUE_CONNECTION=rabbitmq
 
