--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,10 @@
     "require": {
         "php": ">=7.1.3",
         "dingo/api": "^2.2",
+        "illuminate/redis": "^5.8",
         "kitetail/zttp": "^0.4.0",
         "laravel/lumen-framework": "5.8.*",
+        "predis/predis": "^1.1",
         "rap2hpoutre/laravel-log-viewer": "^1.1",
         "vladimir-yuldashev/laravel-queue-rabbitmq": "^8.0",
         "vlucas/phpdotenv": "^3.3"
