整合swoole加订单列表初级接口

--- a/.env.example
+++ b/.env.example
@@ -9,18 +9,18 @@ LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
-CACHE_DRIVER=file
-CACHE_PREFIX=lumen
+CACHE_DRIVER=redis
+CACHE_PREFIX=xisland
 
 #redis
-REDIS_HOST=
-REDIS_PORT=
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
 
 QUEUE_CONNECTION=rabbitmq
 
@@ -28,13 +28,13 @@ QUEUE_CONNECTION=rabbitmq
 #mq的服务器地址
 RABBITMQ_HOST=
 #mq的端口
-RABBITMQ_PORT=
+RABBITMQ_PORT=5672
 #mq的登录名
-RABBITMQ_LOGIN=
+RABBITMQ_LOGIN=guest
 #mq的密码
-RABBITMQ_PASSWORD=
+RABBITMQ_PASSWORD=guest
 #mq的队列名称
-RABBITMQ_QUEUE=
+RABBITMQ_QUEUE=lumen
 
 #dingo api
 API_STANDARDS_TREE=x
@@ -44,3 +44,7 @@ API_PREFIX=api
 API_VERSION=v1
 API_NAME='My API'
 API_STRICT=false
+API_DEFAULT_FORMAT=json
+
+#swoole
+SWOOLE_HTTP_PORT=
