--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/lumen-framework": "5.8.*",
         "predis/predis": "^1.1",
         "rap2hpoutre/laravel-log-viewer": "^1.1",
+        "swooletw/laravel-swoole": "^2.6",
         "vladimir-yuldashev/laravel-queue-rabbitmq": "^8.0",
         "vlucas/phpdotenv": "^3.3"
     },
@@ -26,7 +27,8 @@
             "database/factories"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Xmall\\": "app/Xmall/"
         }
     },
     "autoload-dev": {
