--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ APP_ENV=local
 APP_KEY=base64:nGd9W19REmREgNG5B+PPrcDFafwzF+Kwrf/9VMmK83Y=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Asia/Shanghai
+TIMEZONE=Asia/Shanghai
 
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
